@@ -111,21 +111,21 @@ Sample: "ttbar"
   NtupleFile: "ttbar"
 %   UseMCstat: FALSE
   
-% Sample: "wjets"
-%   Type: BACKGROUND
-%   Title: "W + jets"
-%   Group: "W/Z + jets"
-%   FillColor: 92
-%   LineColor: 1
-%   NtupleFile: "wjets"
-%   
-% Sample: "zjets"
-%   Type: BACKGROUND
-%   Title: "Z + jets"
-%   Group: "W/Z + jets"
-%   FillColor: 95
-%   LineColor: 1
-%   NtupleFile: "zjets"
+Sample: "wjets"
+  Type: BACKGROUND
+  Title: "W + jets"
+  Group: "W/Z + jets"
+  FillColor: 92
+  LineColor: 1
+  NtupleFile: "wjets"
+  
+Sample: "zjets"
+  Type: BACKGROUND
+  Title: "Z + jets"
+  Group: "W/Z + jets"
+  FillColor: 95
+  LineColor: 1
+  NtupleFile: "zjets"
   
 Sample: "singleTop"
   Type: BACKGROUND
